# 2025-final-command-team-28-Whale

./: README.md  TODO.md  docker-compose.yml
backend/: Dockerfile  entrypoint.sh  main.py  pyproject.toml  pytest.ini  requirements.txt  testhelp.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 6da392f10313_test.py
backend/app/core/: cache.py  config.py  db.py
backend/app/errors/: auth.py  requests.py
backend/app/models/: __init__.py  admins.py  auth.py  mentors.py  requests.py  reviews.py  students.py
backend/app/repositories/: __abc_repos__.py  __init__.py  admin_repo.py  mentor_repo.py  request_admin_mentor_repo.py  request_mentor_student_repo.py  review_repo.py  star_repo.py  student_repo.py
backend/app/schema/: schema.py
backend/app/schema/mutations/: admins.py  auth.py  autogenerate.py  mentors.py  review.py  students.py
backend/app/schema/queries/: admins.py  auth.py  mentors.py  statistic.py  students.py
backend/app/schema/types/: __init__.py  admin.py  mentors.py  requests.py  review.py  statistic.py  students.py
backend/app/services/: __abc_service__.py  admin_service.py  mentor_service.py  request_service.py  review_service.py  star_service.py  student_service.py  verify_mentor_service.py
backend/app/utils/: create_admin.py
backend/scripts/: export.sh  start_env.sh
backend/tests/: tests.py
frontend/: Dockerfile  codegen.ts  codegen.yml  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  Wrapper.tsx  main.tsx  router.tsx
frontend/src/apollo/: client.ts
frontend/src/components/: Header.tsx
frontend/src/lib/: mock.ts
frontend/src/styles/: globals.css
(+70 files in other folders)
